package Diadoc.Api.Proto.Documents.UniversalTransferDocument;

option java_outer_classname = "UniversalTransferDocumentProtos";

message UniversalTransferDocumentMetadata {
	optional UniversalTransferDocumentStatus DocumentStatus = 1 [default = UnknownDocumentStatus];
	required string Total = 2; // TotalSum;
	optional string Vat = 3; //TotalVat;
	optional string Grounds = 4; // DocumentGrounds
	required string DocumentFunction = 5;
	required int32 Currency = 6;
	optional sfixed64 ConfirmationDateTimeTicks = 8;
	optional int32 InvoiceAmendmentFlags = 9;
}

message UniversalTransferDocumentRevisionMetadata {
	required UniversalTransferDocument.UniversalTransferDocumentStatus DocumentStatus = 1;
	required string Total = 2; // TotalSum;
	optional string Vat = 3; //TotalVat;
	optional string Grounds = 4; // DocumentGrounds
	required string DocumentFunction = 5;
	required int32 Currency = 6;
	optional sfixed64 ConfirmationDateTimeTicks = 7;
	required int32 InvoiceAmendmentFlags = 8;
	required string OriginalInvoiceNumber = 9;
	required string OriginalInvoiceDate = 10;
}

message UniversalCorrectionDocumentMetadata {
	required UniversalTransferDocument.UniversalTransferDocumentStatus DocumentStatus = 1;
	required string TotalInc = 2;
	required string TotalDec = 3;
	required string VatInc = 4;
	required string VatDec = 5;
	optional string Grounds = 6; // DocumentGrounds
	required string DocumentFunction = 7;
	required int32 Currency = 8;
	required sfixed64 ConfirmationDateTimeTicks = 9;
	required int32 InvoiceAmendmentFlags = 10;
	required string OriginalInvoiceNumber = 11;
	required string OriginalInvoiceDate = 12;
	optional string OriginalInvoiceRevisionNumber = 13;
	optional string OriginalInvoiceRevisionDate = 14;
}

message UniversalCorrectionDocumentRevisionMetadata {
	required UniversalTransferDocument.UniversalTransferDocumentStatus DocumentStatus = 1;
	required string TotalInc = 2;
	required string TotalDec = 3;
	required string VatInc = 4;
	required string VatDec = 5;
	optional string Grounds = 6; // DocumentGrounds
	required string DocumentFunction = 7;
	required int32 Currency = 8;
	required sfixed64 ConfirmationDateTimeTicks = 9;
	required int32 InvoiceAmendmentFlags = 10;
	required string OriginalInvoiceNumber = 11;
	required string OriginalInvoiceDate = 12;
	optional string OriginalInvoiceRevisionNumber = 13;
	optional string OriginalInvoiceRevisionDate = 14;
	required string OriginalInvoiceCorrectionNumber = 15;
	required string OriginalInvoiceCorrectionDate = 16;
}

enum UniversalTransferDocumentStatus {
	UnknownDocumentStatus = 0;	// This type will be reported to legacy client when it receives unknown status from server
	OutboundWaitingForSenderSignature = 1;
	OutboundWaitingForInvoiceReceiptAndRecipientSignature = 2;
	OutboundWaitingForInvoiceReceipt = 3; 
	OutboundWaitingForRecipientSignature = 4;
	OutboundWithRecipientSignature = 5;
	OutboundRecipientSignatureRequestRejected = 6;
	OutboundInvalidSenderSignature = 7;
	OutboundNotFinished = 8;
	OutboundFinished = 9;

	InboundWaitingForRecipientSignature = 16;
	InboundWithRecipientSignature = 17;
	InboundRecipientSignatureRequestRejected = 18;
	InboundInvalidRecipientSignature = 19;
	InboundNotFinished = 20;
	InboundFinished = 21;
}
